--- a/PoloSur/PoloSur/src/polosur/VentanaPrincipal.form
+++ b/PoloSur/PoloSur/src/polosur/VentanaPrincipal.form
@@ -131,6 +131,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Mostrar Detalles"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -244,6 +247,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Salir"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton7ActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel5">
 
